<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManajemenUserActivity"
    android:background="@color/cloud_blue">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="@font/comicbd"
                android:text="@string/str_data_user"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp"/>

            <androidx.cardview.widget.CardView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                app:cardCornerRadius="30dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/layout_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"
                        android:background="@drawable/bg_edittext"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/edt_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="15dp"
                            android:background="@null"
                            android:drawableStart="@drawable/ic_baseline_email_24"
                            android:drawablePadding="10dp"
                            android:fontFamily="@font/comic"
                            android:hint="@string/str_hint_data_email"
                            android:inputType="textEmailAddress"
                            android:nextFocusDown="@id/edt_name"
                            android:selectAllOnFocus="true"
                            android:textColorHint="@color/gray"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"
                        android:background="@drawable/bg_edittext"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/edt_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="15dp"
                            android:background="@null"
                            android:drawableStart="@drawable/ic_baseline_person_24"
                            android:drawablePadding="10dp"
                            android:fontFamily="@font/comic"
                            android:hint="@string/str_hint_data_name"
                            android:inputType="textShortMessage"
                            android:nextFocusDown="@id/edt_password"
                            android:selectAllOnFocus="true"
                            android:textColorHint="@color/gray"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"
                        android:background="@drawable/bg_edittext"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/edt_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="15dp"
                            android:background="@null"
                            android:drawableStart="@drawable/ic_baseline_vpn_key_24"
                            android:drawablePadding="10dp"
                            android:fontFamily="@font/comic"
                            android:hint="@string/str_hint_data_password"
                            android:inputType="textPassword"
                            android:nextFocusDown="@id/edt_con_password"
                            android:selectAllOnFocus="true"
                            android:textColorHint="@color/gray"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_con_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"
                        android:background="@drawable/bg_edittext"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/edt_con_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="15dp"
                            android:background="@null"
                            android:drawableStart="@drawable/ic_baseline_vpn_key_24"
                            android:drawablePadding="10dp"
                            android:fontFamily="@font/comic"
                            android:hint="@string/str_hint_con_password"
                            android:inputType="textPassword"
                            android:nextFocusDown="@id/edt_con_password"
                            android:selectAllOnFocus="true"
                            android:textColorHint="@color/gray"
                            android:textSize="14sp" />
                    </LinearLayout>



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <Button
                            android:id="@+id/btn_batal"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                            android:layout_width="0dp"
                            android:layout_height="55dp"
                            android:layout_weight="2"
                            android:layout_margin="15dp"
                            android:fontFamily="@font/comic"
                            android:text="@string/str_btn_batal"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            app:cornerRadius="15dp"
                            android:backgroundTint="@color/orange"
                            app:rippleColor="@color/cloud_blue"
                            app:strokeWidth="2dp"/>

                        <Button
                            android:id="@+id/btn_okey"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                            android:layout_width="0dp"
                            android:layout_height="55dp"
                            android:layout_weight="2"
                            android:layout_margin="15dp"
                            android:fontFamily="@font/comic"
                            android:text="@string/str_btn_okey"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            app:cornerRadius="15dp"
                            android:backgroundTint="@color/ocean_blue"
                            app:rippleColor="@color/cloud_blue"
                            app:strokeWidth="2dp"/>
                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>